--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* GLOBAL STYLES */
 * {
   margin: 0;
   padding: 0;
@@ -148,39 +147,6 @@ body {
   right: 8%;
 }
 
-/* PLAY BUTTON */
-.play-button {
-  position: absolute;
-  bottom: 28%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 100px;
-  z-index: 5;
-  cursor: pointer;
-}
-.play-button img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  position: absolute;
-  z-index: 1;
-  transition: transform 0.3s;
-}
-.play-button:active img {
-  transform: scale(0.9);
-}
-.play-text {
-  position: absolute;
-  bottom: 19px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 13px;
-  font-weight: bold;
-  color: black;
-  z-index: 2;
-}
-
 /* ARROWS */
 .arrows {
   position: absolute;
@@ -215,8 +181,6 @@ body {
   top: 50%;
   transform: translateY(-50%) rotate(90deg);
 }
-
-/* === ПУЛЬСАЦИЯ СТРЕЛОК С СОХРАНЕНИЕМ ROTATE === */
 
 .arrow.pulse-top {
   animation: pulseMoveTop 1.2s infinite ease-in-out;
@@ -266,4 +230,77 @@ body {
   50% {
     transform: translateY(-50%) translateX(10px) rotate(90deg);
   }
+}
+
+/* CONTROL BUTTONS */
+.control-buttons {
+  position: absolute;
+  bottom: 125px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 23px;
+  z-index: 10;
+}
+.control-buttons button {
+  width: 100px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #fffaf0;
+  border: 2px solid black;
+  color: #000;
+  cursor: pointer;
+  border-radius: 5px;
+  white-space: normal;
+  word-break: break-word;
+  line-height: 1.1;
+  padding: 5px;
+  transition: transform 0.2s ease;
+}
+.control-buttons button:active {
+  transform: scale(0.95);
+}
+
+/* HIGHLIGHTED BALL */
+.ball.highlight {
+  filter: drop-shadow(0 0 10px rgb(95, 67, 253)) brightness(1.3);
+}
+
+/* STEP NUMBER */
+.step-number {
+  position: absolute;
+  top: -15px;
+  left: 50px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #000000;
+  background: rgba(255, 255, 255, 0.048);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  animation: pulseNumber 1.2s infinite ease-in-out;
+  z-index: 5;
+}
+
+@keyframes pulseNumber {
+  0%,
+  100% {
+    transform: translateX(-50%) scale(1);
+  }
+  50% {
+    transform: translateX(-50%) scale(1.2);
+  }
+}
+.btn-new {
+  background-color: #57a8ff !important;
+  color: white !important;
+  border: 2px solid #57a8ff !important;
 }
